# drag_and_drop

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  requirements.txt  routes.py
backend/core/: config.py  database.py  decorators.py  lifespan.py
backend/models/: schemas.py
backend/repositories/: file_repository.py
backend/rust_parser/: Cargo.toml  pyproject.toml
backend/rust_parser/src/: db.rs  lib.rs  parsers.rs  utils.rs
backend/services/: file_service.py  processing_service.py  search_service.py  storage_service.py  sync_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FileDataTable.tsx  SearchBar.tsx  Title.tsx  UploadModal.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  table.tsx
frontend/src/config/: index.ts
frontend/src/hooks/: useFiles.ts  useUpload.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts  errorService.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatDate.ts  formatFileSize.ts
