[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
csv = "1.3"
serde_json = "1.0"
quick-xml = "0.38.0"
encoding_rs = "0.8"
pdf-extract = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.19"
regex = "1.11"

[profile.release]
opt-level = 3
lto = true 